--- a/style.css
+++ b/style.css
@@ -33,10 +33,14 @@ body {
   padding-right: 20px;
   padding-left: 15px;
   border-radius: 15px;
+  min-height:300px;
+  max-height: 300px;
+  overflow: auto;
 }
 
 .chatlog {
    font: 15px arial, sans-serif;
+
 }
 
 #message {
